# black-sholes

./: .gitignore  CLAUDE.md  Justfile  README.md  app.py  app_api.py  app_fastapi.py  black_scholes.db  black_scholes.py  db_storage.py  flask_app.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
api/: README.md  fastapi_app.py  flask_app.py
api/auth/: __init__.py  jwt.py
api/models/: __init__.py  auth.py  calculations.py  heatmaps.py
api/routes/: __init__.py  auth.py  auth_routes.py  calculation_routes.py  calculations.py  heatmap_routes.py  heatmaps.py
database/: __init__.py  constants.py  db_storage.py  orm.py
database/instance/: black_scholes.db
database/models/: calculations.py  heatmap.py
docs/: FASTAPI_REFACTORING.md
functions/: __init__.py  implied_volatility.py  visualization.py
pages/: implied_volatility_surface.py
src/blacksholes/: bs_client.py  bs_config.py
src/blacksholes/schemas/: __init__.py  auth.py  calculations.py  heatmaps.py
src/blacksholes/tests/: test_auth.py  test_bs.py  test_calculations.py  test_error_handling.py
tests/: __init__.py  test_api_integration.py  test_black_scholes.py  test_implied_volatility.py  test_orm_models.py  test_sqlite_storage.py
utils/: __init__.py  constants.py  logconfig.py
